work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.6)
 
 project (elfin)
 
-add_subdirectory(elf elf)
-add_subdirectory(dwarf dwarf)
+add_subdirectory(elf elfdir)
+add_subdirectory(dwarf dwarfdir)
