--- a/elf/CMakeLists.txt
+++ b/elf/CMakeLists.txt
@@ -11,6 +11,7 @@ configure_file(create_to_string_code.sh ${configured_to_string_script})
 add_custom_command(
   OUTPUT ${to_string_src}
   COMMAND bash ${configured_to_string_script} ${toStringInputHeader} ${to_string_src})
-add_custom_target(to_string_target DEPENDS ${to_string_src})
+add_custom_target(elf_to_string_target DEPENDS ${to_string_src})
 add_library(elf elf.cc mmap_loader.cc ${to_string_src})
+add_dependencies(elf elf_to_string_target)
 target_include_directories(elf PUBLIC ${CMAKE_CURRENT_LIST_DIR})
